--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@
   --min-size: 14px;
 }
 
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 .top {
   position: fixed;
   width: 100%;
