--- a/style.css
+++ b/style.css
@@ -42,9 +42,13 @@
   place-items: center;
 }
 
-#title{
+
+#title {
   margin-right: 10px;
   font-size: 20px;
+  font-family: 'Pretendard';
+  text-align: right;
+  width: 98%;
 }
 
 
