--- a/style.css
+++ b/style.css
@@ -30,11 +30,12 @@
   font-style: normal;
 }
 
+
 .top {
   position: fixed;
   width: 100%;
   height: 70px;
-  border-bottom: solid;
+  border-bottom: solid 2px;
   text-align: right;
   background-color: white;
   top: 0px;
